chrome/browser/ui/views/frame/browser_non_client_frame_view.h
@@ -82,7 +82,7 @@ class BrowserNonClientFrameView : public views::NonClientFrameView,
 
   // Updates the top UI state to be hidden or shown in fullscreen according to
   // the preference's state. Currently only used on Mac.
-  virtual void UpdateFullscreenTopUI(bool is_exiting_fullscreen);
+  virtual void UpdateFullscreenTopUI(bool needs_check_tab_fullscreen);
 
   // Returns whether the top UI should hide.
   virtual bool ShouldHideTopUIForFullscreen() const;
